<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:padding="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Tip_Calc"
        android:textSize="25sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/base_amount"/>

    <EditText
        android:id="@+id/base_amount"
        android:inputType="numberDecimal"
        android:hint="Enter base amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/tip_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/tip_percentage_text"/>

    <SeekBar
        android:id="@+id/tip_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="15"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tip_message"
        android:text="@string/Tip_Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tip_amount"
        android:text="@string/Tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/total_amount"
        android:text="@string/Total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:ignore="HardcodedText" />


    <TextView
        android:id="@+id/made_by"
        android:text="@string/made_by_daniel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"/>

</LinearLayout>

